# Neuro_Omics_Database_Creation

./: .breakpoints  ALZHEIMER.xlsx  DB_ALZ.py  README.md  app.py  check_data.py  database.db  database_2.db  fetch_ncbi_data.py  init_db.py  pyproject.toml  test.db  test_fetch.py  test_sqlite.py
templates/: ALZ_genomics.html  Parkinsons_genomics.html  genomics.html  home.html  metabolomics.html  parkinsons_genomics.html  proteomics.html  transcriptomics.html
