[tool.poetry]
name = "repl-nix-multi-omics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_multi_omics"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
spyprot = "^0.9.0"
sqlite3-0611 = "0.0.1"
biopython = "1.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
